--- a/app/src/main/res/layout/add_course.xml
+++ b/app/src/main/res/layout/add_course.xml
@@ -79,7 +79,7 @@
         android:minHeight="48dp"
         android:minWidth="48dp"/>
 
-    <!-- ID del ciclo -->
+    <!-- ID del semester -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
