--- a/app/src/main/res/layout/admin.xml
+++ b/app/src/main/res/layout/admin.xml
@@ -40,21 +40,21 @@
             android:layout_marginTop="26dp"
             android:layout_marginStart="5dp"/>
 
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:scaleType="fitCenter"
-            android:layout_marginTop="350dp"
-            android:src="@drawable/unaa"
-            android:alpha="0.7"
-            android:layout_marginStart="90dp"
-            android:contentDescription="Background Image"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+    <!--<ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:scaleType="fitCenter"
+        android:layout_marginTop="350dp"
+        android:src="@drawable/unaa"
+        android:alpha="0.7"
+        android:layout_marginStart="90dp"
+        android:contentDescription="Background Image"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>-->
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- Menú lateral -->
+<!-- Menú lateral -->
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
