--- a/app/src/main/res/layout/edit_student.xml
+++ b/app/src/main/res/layout/edit_student.xml
@@ -47,6 +47,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <!-- password -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Enter the password"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"/>
+        <EditText
+            android:id="@+id/editPass"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
         <!-- Correo electrónico -->
         <TextView
             android:layout_width="wrap_content"
