--- a/app/src/main/res/layout/add_group.xml
+++ b/app/src/main/res/layout/add_group.xml
@@ -115,13 +115,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <EditText
-        android:id="@+id/agregar_grupo_courseCod"
+    <Spinner
+        android:id="@+id/course_spinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Code"
-        android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/agregar_grupo_courseCod_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -135,17 +133,15 @@
         android:text="Enter teacher id"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/agregar_grupo_courseCod"
+        app:layout_constraintTop_toBottomOf="@id/course_spinner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <EditText
-        android:id="@+id/agregar_grupo_teacherId"
+    <Spinner
+        android:id="@+id/teacher_spinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="ID"
-        android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/agregar_grupo_teacherId_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -160,7 +156,7 @@
         android:backgroundTint="@color/purple_500"
         android:textColor="@android:color/white"
         android:minHeight="48dp"
-        app:layout_constraintTop_toBottomOf="@id/agregar_grupo_teacherId"
+        app:layout_constraintTop_toBottomOf="@id/teacher_spinner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
