--- a/app/src/main/res/layout/add_student.xml
+++ b/app/src/main/res/layout/add_student.xml
@@ -163,13 +163,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"/>
 
-    <EditText
-        android:id="@+id/agregar_estudiante_careerCod"
+    <Spinner
+        android:id="@+id/career_spinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="Carrer Code"
-        android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/agregar_estudiante_careerCod_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -184,7 +182,7 @@
         android:backgroundTint="@color/purple_500"
         android:textColor="@android:color/white"
         android:minHeight="48dp"
-        app:layout_constraintTop_toBottomOf="@id/agregar_estudiante_careerCod"
+        app:layout_constraintTop_toBottomOf="@id/career_spinner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp" />
