--- a/app/src/main/res/layout/add_teacher.xml
+++ b/app/src/main/res/layout/add_teacher.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/agregar_profesor_id"
@@ -41,7 +41,7 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_profesor_id"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/agregar_profesor_name"
@@ -65,7 +65,7 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_profesor_name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/agregar_profesor_telNumber"
@@ -89,7 +89,7 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/agregar_profesor_telNumber"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/agregar_profesor_email"
@@ -103,6 +103,30 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="16dp" />
 
+    <!-- Pregunta para contraseña del teacher -->
+    <TextView
+        android:id="@+id/agregar_profesor_pass_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enter the password"
+        android:textStyle="bold"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/agregar_profesor_email"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <EditText
+        android:id="@+id/agregar_profesor_pass"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:hint="Password"
+        android:inputType="textPassword"
+        app:layout_constraintTop_toBottomOf="@id/agregar_profesor_pass_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="16dp" />
+
     <!-- Botón para guardar el teacher -->
     <Button
         android:id="@+id/btn_guardar_profesor"
@@ -112,7 +136,7 @@
         android:backgroundTint="@color/purple_500"
         android:textColor="@android:color/white"
         android:minHeight="48dp"
-        app:layout_constraintTop_toBottomOf="@id/agregar_profesor_email"
+        app:layout_constraintTop_toBottomOf="@id/agregar_profesor_pass"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
