--- a/app/src/main/res/layout/item_student_grade.xml
+++ b/app/src/main/res/layout/item_student_grade.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@color/gray">
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/student_name"
