--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#666BCA</color>
     <color name="red">#AB1212</color>
+    <color name="green">#0D7909</color>
 </resources>
