--- a/app/src/main/res/layout/admin.xml
+++ b/app/src/main/res/layout/admin.xml
@@ -40,17 +40,14 @@
             android:layout_marginTop="26dp"
             android:layout_marginStart="5dp"/>
 
-    <!--<ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:scaleType="fitCenter"
-        android:layout_marginTop="350dp"
-        android:src="@drawable/unaa"
-        android:alpha="0.7"
-        android:layout_marginStart="90dp"
-        android:contentDescription="Background Image"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>-->
+        <!-- Contenedor para el RecyclerView -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/requests_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="100dp"
+            android:padding="8dp"
+            android:clipToPadding="false"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
