--- a/app/src/main/res/layout/admin.xml
+++ b/app/src/main/res/layout/admin.xml
@@ -2,6 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -35,23 +36,25 @@
             android:background="@null"
             android:contentDescription="Menu"
             android:padding="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="26dp"
-            android:layout_marginStart="5dp"/>
+            android:layout_marginStart="5dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <!-- Contenedor para el RecyclerView -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/requests_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="414dp"
+            android:layout_height="489dp"
             android:layout_margin="100dp"
+            android:clipToPadding="false"
             android:padding="8dp"
-            android:clipToPadding="false"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!-- Menú lateral -->
+    <!-- Menú lateral -->
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
@@ -59,18 +62,19 @@
         android:layout_gravity="start"
         android:clickable="true"
         android:focusable="true"
+
+
         app:menu="@menu/drawer_menu" />
 
+    <!-- Texto de bienvenida -->
     <TextView
         android:id="@+id/textViewWelcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome"
+        android:text="List of requests"
         android:textSize="24sp"
-        android:layout_marginStart="18dp"
         android:textColor="@color/white"
-        android:layout_marginTop="90dp"
-        app:layout_constraintTop_toBottomOf="@id/menu_button"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="90dp"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
