--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -173,7 +173,7 @@
                 android:id="@+id/born_date_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="DD/MM/AAAA"
+                android:hint="AAAA-MM-DD"
                 android:inputType="date"
                 android:background="@drawable/rounded_corner"
                 android:textColor="@color/white"
