--- a/app/src/main/res/layout/activity_student_enrollments.xml
+++ b/app/src/main/res/layout/activity_student_enrollments.xml
@@ -9,7 +9,7 @@
         android:id="@+id/tvStudentName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Matrículas de: "
+        android:text="Enrollments of: "
         android:layout_marginTop="24dp"
         android:textSize="18sp"
         android:padding="16dp"/>
@@ -25,5 +25,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="52dp"
-        android:text="Agregar Matrícula"/>
+        android:text="Add Enrollment"/>
 </LinearLayout>
