--- a/app/src/main/res/layout/add_semester.xml
+++ b/app/src/main/res/layout/add_semester.xml
@@ -95,7 +95,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="(YYYY-MM-DD)"
+        android:hint="YYYY-MM-DD"
         android:inputType="date"
         app:layout_constraintTop_toBottomOf="@id/agregar_fecha_inicio_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -119,7 +119,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:hint="(YYYY-MM-DD)"
+        android:hint="YYYY-MM-DD"
         android:inputType="date"
         app:layout_constraintTop_toBottomOf="@id/agregar_fecha_fin_text"
         app:layout_constraintStart_toStartOf="parent"
