--- a/app/src/main/res/layout/career.xml
+++ b/app/src/main/res/layout/career.xml
@@ -42,7 +42,7 @@
             android:id="@+id/search_view"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:queryHint="Busca por nombre"
+            android:queryHint="Search by name"
             android:layout_marginTop="80dp"
             android:layout_marginStart="22dp"
             android:iconifiedByDefault="false"
