--- a/app/src/main/res/layout/edit_career.xml
+++ b/app/src/main/res/layout/edit_career.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tvTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Editar Carrera"
+        android:text="Edit Career"
         android:textStyle="bold"
         android:textSize="18sp"
         app:layout_constraintTop_toTopOf="parent"
@@ -32,7 +32,7 @@
         android:id="@+id/edit_cod"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Código"
+        android:hint="ID"
         android:inputType="number"
         android:enabled="false"
         app:layout_constraintTop_toBottomOf="@id/tvCodigo"
@@ -43,7 +43,7 @@
         android:id="@+id/tvNombreCarrera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nombre de la carrera"
+        android:text="Name of career"
         android:textStyle="bold"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/edit_cod"
@@ -53,7 +53,7 @@
         android:id="@+id/edit_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Nombre"
+        android:hint="Name"
         app:layout_constraintTop_toBottomOf="@id/tvNombreCarrera"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -62,7 +62,7 @@
         android:id="@+id/tvTituloCarrera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Título"
+        android:text="Title of career"
         android:textStyle="bold"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/edit_name"
@@ -72,7 +72,7 @@
         android:id="@+id/edit_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Título"
+        android:hint="Title"
         app:layout_constraintTop_toBottomOf="@id/tvTituloCarrera"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -82,7 +82,7 @@
         android:id="@+id/tvAssignedCourses"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cursos asignados"
+        android:text="Courses assigned"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/edit_title"
@@ -103,7 +103,7 @@
         android:id="@+id/tvUnassignedCourses"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cursos disponibles para añadir"
+        android:text="Courses available to add"
         android:textStyle="bold"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/assignedCoursesListView"
@@ -124,10 +124,12 @@
         android:id="@+id/btn_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Guardar"
+        android:text="Save"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/unassignedCoursesListView"
         app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/purple_700"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
