--- a/app/src/main/res/layout/edit_semester.xml
+++ b/app/src/main/res/layout/edit_semester.xml
@@ -75,7 +75,7 @@
         android:id="@+id/edit_start_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="(YYYY-MM-DD)"
+        android:hint="YYYY-MM-DD"
         android:inputType="date"
         app:layout_constraintTop_toBottomOf="@id/tvStartDate"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +96,7 @@
         android:id="@+id/edit_finish_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="(YYYY-MM-DD)"
+        android:hint="YYYY-MM-DD"
         android:inputType="date"
         app:layout_constraintTop_toBottomOf="@id/tvFinishDate"
         app:layout_constraintStart_toStartOf="parent"
