--- a/app/src/main/res/layout/teacher_grades.xml
+++ b/app/src/main/res/layout/teacher_grades.xml
@@ -42,7 +42,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="Seleccione el grupo:"
+                    android:text="Select group:"
                     android:textSize="16sp" />
 
                 <Spinner
@@ -54,7 +54,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Estudiantes matriculados:"
+                    android:text="Students enrolled:"
                     android:textSize="16sp"
                     android:layout_marginBottom="8dp" />
 
@@ -72,7 +72,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:backgroundTint="@color/purple_500"
-                    android:text="Guardar Cambios"
+                    android:text="Save Changes"
                     android:textColor="@android:color/white" />
             </LinearLayout>
         </ScrollView>
